--- a/docs/technical/latex/_r_type_client_8hpp_source.tex
+++ b/docs/technical/latex/_r_type_client_8hpp_source.tex
@@ -15,29 +15,31 @@
 \DoxyCodeLine{00011\ \textcolor{preprocessor}{\#include\ <boost/bind.hpp>}}
 \DoxyCodeLine{00012\ \textcolor{preprocessor}{\#include\ <boost/asio.hpp>}}
 \DoxyCodeLine{00013\ \textcolor{preprocessor}{\#include\ <iostream>}}
-\DoxyCodeLine{00014\ \textcolor{preprocessor}{\#include\ <memory>}}
-\DoxyCodeLine{00015\ \textcolor{preprocessor}{\#include\ <optional>}}
-\DoxyCodeLine{00016\ \textcolor{preprocessor}{\#include\ <functional>}}
-\DoxyCodeLine{00017\ }
-\DoxyCodeLine{00018\ \textcolor{comment}{//\ Game\ Engine\ Network}}
-\DoxyCodeLine{00019\ \textcolor{preprocessor}{\#include\ "{}../../gameEngine/include/network/Commands.hpp"{}}}
-\DoxyCodeLine{00020\ \textcolor{preprocessor}{\#include\ "{}../../gameEngine/include/network/Messages.hpp"{}}}
-\DoxyCodeLine{00021\ \textcolor{preprocessor}{\#include\ "{}../../gameEngine/include/network/MessageType.hpp"{}}}
-\DoxyCodeLine{00022\ \textcolor{preprocessor}{\#include\ "{}../../gameEngine/include/network/Responses.hpp"{}}}
-\DoxyCodeLine{00023\ \textcolor{preprocessor}{\#include\ "{}../../gameEngine/include/network/Statuses.hpp"{}}}
-\DoxyCodeLine{00024\ }
-\DoxyCodeLine{00025\ \textcolor{preprocessor}{\#include\ "{}Constants.hpp"{}}}
-\DoxyCodeLine{00026\ \textcolor{preprocessor}{\#include\ "{}Network.hpp"{}}}
-\DoxyCodeLine{00027\ }
-\DoxyCodeLine{00028\ \textcolor{comment}{//\ Components}}
-\DoxyCodeLine{00029\ \textcolor{preprocessor}{\#include\ "{}Components/Background.hpp"{}}}
-\DoxyCodeLine{00030\ \textcolor{preprocessor}{\#include\ "{}Components/Button.hpp"{}}}
-\DoxyCodeLine{00031\ \textcolor{preprocessor}{\#include\ "{}Components/InputText.hpp"{}}}
-\DoxyCodeLine{00032\ }
-\DoxyCodeLine{00033\ \textcolor{comment}{//\ Scenes}}
-\DoxyCodeLine{00034\ \textcolor{preprocessor}{\#include\ "{}Scenes/Manager.hpp"{}}}
-\DoxyCodeLine{00035\ \textcolor{preprocessor}{\#include\ "{}Scenes/Game.hpp"{}}}
-\DoxyCodeLine{00036\ \textcolor{preprocessor}{\#include\ "{}Scenes/Lobby.hpp"{}}}
-\DoxyCodeLine{00037\ \textcolor{preprocessor}{\#include\ "{}Scenes/Welcome.hpp"{}}}
+\DoxyCodeLine{00014\ \textcolor{preprocessor}{\#include\ <iomanip>}}
+\DoxyCodeLine{00015\ \textcolor{preprocessor}{\#include\ <sstream>}}
+\DoxyCodeLine{00016\ \textcolor{preprocessor}{\#include\ <memory>}}
+\DoxyCodeLine{00017\ \textcolor{preprocessor}{\#include\ <optional>}}
+\DoxyCodeLine{00018\ \textcolor{preprocessor}{\#include\ <functional>}}
+\DoxyCodeLine{00019\ }
+\DoxyCodeLine{00020\ \textcolor{comment}{//\ Game\ Engine\ Network}}
+\DoxyCodeLine{00021\ \textcolor{preprocessor}{\#include\ "{}../../gameEngine/include/network/Commands.hpp"{}}}
+\DoxyCodeLine{00022\ \textcolor{preprocessor}{\#include\ "{}../../gameEngine/include/network/Messages.hpp"{}}}
+\DoxyCodeLine{00023\ \textcolor{preprocessor}{\#include\ "{}../../gameEngine/include/network/MessageType.hpp"{}}}
+\DoxyCodeLine{00024\ \textcolor{preprocessor}{\#include\ "{}../../gameEngine/include/network/Responses.hpp"{}}}
+\DoxyCodeLine{00025\ \textcolor{preprocessor}{\#include\ "{}../../gameEngine/include/network/Statuses.hpp"{}}}
+\DoxyCodeLine{00026\ }
+\DoxyCodeLine{00027\ \textcolor{preprocessor}{\#include\ "{}Constants.hpp"{}}}
+\DoxyCodeLine{00028\ \textcolor{preprocessor}{\#include\ "{}Network.hpp"{}}}
+\DoxyCodeLine{00029\ }
+\DoxyCodeLine{00030\ \textcolor{comment}{//\ Components}}
+\DoxyCodeLine{00031\ \textcolor{preprocessor}{\#include\ "{}Components/Background.hpp"{}}}
+\DoxyCodeLine{00032\ \textcolor{preprocessor}{\#include\ "{}Components/Button.hpp"{}}}
+\DoxyCodeLine{00033\ \textcolor{preprocessor}{\#include\ "{}Components/InputText.hpp"{}}}
+\DoxyCodeLine{00034\ }
+\DoxyCodeLine{00035\ \textcolor{comment}{//\ Scenes}}
+\DoxyCodeLine{00036\ \textcolor{preprocessor}{\#include\ "{}Scenes/Manager.hpp"{}}}
+\DoxyCodeLine{00037\ \textcolor{preprocessor}{\#include\ "{}Scenes/Game.hpp"{}}}
+\DoxyCodeLine{00038\ \textcolor{preprocessor}{\#include\ "{}Scenes/Lobby.hpp"{}}}
+\DoxyCodeLine{00039\ \textcolor{preprocessor}{\#include\ "{}Scenes/Welcome.hpp"{}}}
 
 \end{DoxyCode}
