--- a/docs/technical/latex/client_2include_2_constants_8hpp_source.tex
+++ b/docs/technical/latex/client_2include_2_constants_8hpp_source.tex
@@ -12,5 +12,12 @@
 \DoxyCodeLine{00008\ \textcolor{preprocessor}{\#define\ NUMBER\_OF\_ROOMS\ 4}}
 \DoxyCodeLine{00009\ }
 \DoxyCodeLine{00010\ \textcolor{preprocessor}{\#define\ MAX\_NAME\_LENGTH\ 32}}
+\DoxyCodeLine{00011\ }
+\DoxyCodeLine{00012\ \textcolor{comment}{//\ Colors}}
+\DoxyCodeLine{00013\ \textcolor{keyword}{const}\ std::string\ RED\ =\ \textcolor{stringliteral}{"{}\(\backslash\)033[31m"{}};}
+\DoxyCodeLine{00014\ \textcolor{keyword}{const}\ std::string\ GREEN\ =\ \textcolor{stringliteral}{"{}\(\backslash\)033[32m"{}};}
+\DoxyCodeLine{00015\ \textcolor{keyword}{const}\ std::string\ YELLOW\ =\ \textcolor{stringliteral}{"{}\(\backslash\)033[33m"{}};}
+\DoxyCodeLine{00016\ \textcolor{keyword}{const}\ std::string\ CYAN\ =\ \textcolor{stringliteral}{"{}\(\backslash\)033[36m"{}};}
+\DoxyCodeLine{00017\ \textcolor{keyword}{const}\ std::string\ RESET\ =\ \textcolor{stringliteral}{"{}\(\backslash\)033[0m"{}};}
 
 \end{DoxyCode}
