--- a/docs/technical/latex/class_client_1_1_network.tex
+++ b/docs/technical/latex/class_client_1_1_network.tex
@@ -12,8 +12,8 @@ void {\bfseries send} (const boost\+::asio\+::const\+\_\+buffer \&buffer)
 \Hypertarget{class_client_1_1_network_a31b56f08e9f5890e3faa1cc2e6a72779}\label{class_client_1_1_network_a31b56f08e9f5890e3faa1cc2e6a72779} 
 void {\bfseries send\+Message} (const std\+::string \&command, const char data\mbox{[}$\,$\mbox{]}=nullptr, int data\+Size=0)
 \item 
-\Hypertarget{class_client_1_1_network_a45cc0e5d12a0a71908ae8f56e9d08ba5}\label{class_client_1_1_network_a45cc0e5d12a0a71908ae8f56e9d08ba5} 
-void {\bfseries send\+Response} (const std\+::string \&command, const std\+::string \&status\+Message, const char data\mbox{[}$\,$\mbox{]}, int data\+Size, int status)
+\Hypertarget{class_client_1_1_network_a5a641f7ca1017521905b2f903b7c715e}\label{class_client_1_1_network_a5a641f7ca1017521905b2f903b7c715e} 
+void {\bfseries send\+Response} (const std\+::string \&command, const std\+::string \&status\+Message, const char data\mbox{[}$\,$\mbox{]}=nullptr, int data\+Size=0, int status=RES\+\_\+\+SUCCESS)
 \item 
 \Hypertarget{class_client_1_1_network_ab0adb2e5baaca04802dd5b2a99e2599c}\label{class_client_1_1_network_ab0adb2e5baaca04802dd5b2a99e2599c} 
 void {\bfseries start\+Receive} ()
