--- a/docs/technical/latex/Background_8hpp_source.tex
+++ b/docs/technical/latex/Background_8hpp_source.tex
@@ -15,7 +15,7 @@
 \DoxyCodeLine{11     \textcolor{keyword}{class }\mbox{\hyperlink{classClient_1_1Background}{Background}} \{}
 \DoxyCodeLine{12         \textcolor{keyword}{public}:}
 \DoxyCodeLine{13             \mbox{\hyperlink{classClient_1_1Background}{Background}}() = \textcolor{keywordflow}{default};}
-\DoxyCodeLine{14             \mbox{\hyperlink{classClient_1_1Background}{Background}}(sf::Vector2f position, std::string assetPath);}
+\DoxyCodeLine{14             \mbox{\hyperlink{classClient_1_1Background}{Background}}(sf::Vector2f position, std::string defaultAssetPath);}
 \DoxyCodeLine{15             \mbox{\hyperlink{classClient_1_1Background}{\string~Background}}() = \textcolor{keywordflow}{default};}
 \DoxyCodeLine{16             \mbox{\hyperlink{classClient_1_1Background}{Background}}(\mbox{\hyperlink{classClient_1_1Background}{Background}} \textcolor{keyword}{const} \&toCopy) = \textcolor{keywordflow}{default};}
 \DoxyCodeLine{17             \mbox{\hyperlink{classClient_1_1Background}{Background}}(\mbox{\hyperlink{classClient_1_1Background}{Background}} \&\&toMove) = \textcolor{keywordflow}{default};}
