--- a/docs/technical/latex/Button_8hpp_source.tex
+++ b/docs/technical/latex/Button_8hpp_source.tex
@@ -18,7 +18,7 @@
 \DoxyCodeLine{14             \mbox{\hyperlink{classClient_1_1Button}{Button}}(}
 \DoxyCodeLine{15                 sf::Vector2f position,}
 \DoxyCodeLine{16                 sf::Vector2f size,}
-\DoxyCodeLine{17                 std::string assetPath}
+\DoxyCodeLine{17                 std::string defaultAssetPath}
 \DoxyCodeLine{18             );}
 \DoxyCodeLine{19             \mbox{\hyperlink{classClient_1_1Button}{\string~Button}}() = \textcolor{keywordflow}{default};}
 \DoxyCodeLine{20             \mbox{\hyperlink{classClient_1_1Button}{Button}}(\mbox{\hyperlink{classClient_1_1Button}{Button}} \textcolor{keyword}{const} \&toCopy) = \textcolor{keywordflow}{default};}
