--- a/docs/technical/latex/_button_8hpp_source.tex
+++ b/docs/technical/latex/_button_8hpp_source.tex
@@ -18,7 +18,7 @@
 \DoxyCodeLine{00014\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_button}{Button}}(}
 \DoxyCodeLine{00015\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ sf::Vector2f\ position,}
 \DoxyCodeLine{00016\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ sf::Vector2f\ size,}
-\DoxyCodeLine{00017\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ std::string\ assetPath}
+\DoxyCodeLine{00017\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ std::string\ defaultAssetPath}
 \DoxyCodeLine{00018\ \ \ \ \ \ \ \ \ \ \ \ \ );}
 \DoxyCodeLine{00019\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_button}{\string~Button}}()\ =\ \textcolor{keywordflow}{default};}
 \DoxyCodeLine{00020\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_button}{Button}}(\mbox{\hyperlink{class_client_1_1_button}{Button}}\ \textcolor{keyword}{const}\ \&toCopy)\ =\ \textcolor{keywordflow}{default};}
