--- a/docs/technical/latex/_background_8hpp_source.tex
+++ b/docs/technical/latex/_background_8hpp_source.tex
@@ -15,7 +15,7 @@
 \DoxyCodeLine{00011\ \ \ \ \ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_client_1_1_background}{Background}}\ \{}
 \DoxyCodeLine{00012\ \ \ \ \ \ \ \ \ \textcolor{keyword}{public}:}
 \DoxyCodeLine{00013\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_background}{Background}}()\ =\ \textcolor{keywordflow}{default};}
-\DoxyCodeLine{00014\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_background}{Background}}(sf::Vector2f\ position,\ std::string\ assetPath);}
+\DoxyCodeLine{00014\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_background}{Background}}(sf::Vector2f\ position,\ std::string\ defaultAssetPath);}
 \DoxyCodeLine{00015\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_background}{\string~Background}}()\ =\ \textcolor{keywordflow}{default};}
 \DoxyCodeLine{00016\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_background}{Background}}(\mbox{\hyperlink{class_client_1_1_background}{Background}}\ \textcolor{keyword}{const}\ \&toCopy)\ =\ \textcolor{keywordflow}{default};}
 \DoxyCodeLine{00017\ \ \ \ \ \ \ \ \ \ \ \ \ \mbox{\hyperlink{class_client_1_1_background}{Background}}(\mbox{\hyperlink{class_client_1_1_background}{Background}}\ \&\&toMove)\ =\ \textcolor{keywordflow}{default};}
