--- a/docs/technical/latex/_registry_builder_8hpp_source.tex
+++ b/docs/technical/latex/_registry_builder_8hpp_source.tex
@@ -28,7 +28,7 @@
 \DoxyCodeLine{00024\ \ \ \ \ \textcolor{keywordtype}{void}\ buildSystemRenderer();}
 \DoxyCodeLine{00025\ \ \ \ \ \textcolor{keywordtype}{void}\ buildSystemAnimation();}
 \DoxyCodeLine{00026\ \ \ \ \ \textcolor{keywordtype}{void}\ buildSystemPhysics();}
-\DoxyCodeLine{00027\ \ \ \ \ \textcolor{keywordtype}{void}\ buildSystemKeyboard();}
+\DoxyCodeLine{00027\ \ \ \ \ \textcolor{keywordtype}{void}\ buildSystemInputCatcher();}
 \DoxyCodeLine{00028\ \ \ \ \ \textcolor{keywordtype}{void}\ buildSystemEcsSerializer();}
 \DoxyCodeLine{00029\ \ \ \ \ \textcolor{keywordtype}{void}\ buildSystemMove();}
 \DoxyCodeLine{00030\ \ \ \ \ \textcolor{keywordtype}{void}\ buildSystemInput();}
