--- a/docs/technical/latex/_scene_container_8hpp_source.tex
+++ b/docs/technical/latex/_scene_container_8hpp_source.tex
@@ -22,7 +22,7 @@
 \DoxyCodeLine{00018\ }
 \DoxyCodeLine{00019\ \ \ \ \ \textcolor{keywordtype}{void}\ addScene(std::string\ \textcolor{keyword}{const}\&\ name,\ std::unique\_ptr<IScene>\ scene);}
 \DoxyCodeLine{00020\ \ \ \ \ \textcolor{keywordtype}{void}\ deleteScene(std::string\ \textcolor{keyword}{const}\&\ name);}
-\DoxyCodeLine{00021\ \ \ \ \ \mbox{\hyperlink{class_game_engine_1_1_scene_1_1_i_scene}{IScene}}\&\ getScene(std::string\ \textcolor{keyword}{const}\&\ name);}
+\DoxyCodeLine{00021\ \ \ \ \ \mbox{\hyperlink{class_game_engine_1_1_scene_1_1_i_scene}{IScene}}\&\ getScenes(std::string\ \textcolor{keyword}{const}\&\ name);}
 \DoxyCodeLine{00022\ \ \ \ \ \mbox{\hyperlink{class_game_engine_1_1_scene_1_1_i_scene}{IScene}}\&\ find(std::string\ \textcolor{keyword}{const}\&\ name);}
 \DoxyCodeLine{00023\ }
 \DoxyCodeLine{00024\ \ \ \ \ \textcolor{keyword}{typename}\ std::map<std::string,\ std::unique\_ptr<IScene>>::iterator\ begin()}
