--- a/docs/technical/latex/_entity_type_8hpp_source.tex
+++ b/docs/technical/latex/_entity_type_8hpp_source.tex
@@ -21,7 +21,7 @@
 \DoxyCodeLine{00017\ \ \ \ \ Bullet}
 \DoxyCodeLine{00018\ \ \ \};}
 \DoxyCodeLine{00019\ }
-\DoxyCodeLine{00020\ \ \ \textcolor{keyword}{struct\ }\mbox{\hyperlink{struct_game_engine_1_1_entity_1_1_component_blue_print}{ComponentBluePrint}}\ \{}
+\DoxyCodeLine{00020\ \ \ \textcolor{keyword}{struct\ }\mbox{\hyperlink{struct_game_engine_1_1_entity_1_1_component_blue_print}{ComponentsBluePrint}}\ \{}
 \DoxyCodeLine{00021\ \ \ \ \ \textcolor{keywordtype}{bool}\ transform\ =\ \textcolor{keyword}{false};}
 \DoxyCodeLine{00022\ \ \ \ \ \textcolor{keywordtype}{bool}\ displayable\ =\ \textcolor{keyword}{false};}
 \DoxyCodeLine{00023\ \ \ \ \ \textcolor{keywordtype}{bool}\ clickable\ =\ \textcolor{keyword}{false};}
@@ -35,7 +35,7 @@
 \DoxyCodeLine{00031\ \ \ \textcolor{keyword}{struct\ }\mbox{\hyperlink{struct_game_engine_1_1_entity_1_1_entity_blue_print}{EntityBluePrint}}\ \{}
 \DoxyCodeLine{00032\ \ \ \ \ \textcolor{keywordtype}{bool}\ light\ =\ \textcolor{keyword}{true};}
 \DoxyCodeLine{00033\ \ \ \ \ std::string\ defaultAssetPath\ =\ \textcolor{stringliteral}{"{}"{}};}
-\DoxyCodeLine{00034\ \ \ \ \ \mbox{\hyperlink{struct_game_engine_1_1_entity_1_1_component_blue_print}{ComponentBluePrint}}\ blueprint;}
+\DoxyCodeLine{00034\ \ \ \ \ \mbox{\hyperlink{struct_game_engine_1_1_entity_1_1_component_blue_print}{ComponentsBluePrint}}\ blueprint;}
 \DoxyCodeLine{00035\ \ \ \};}
 \DoxyCodeLine{00036\ }
 \DoxyCodeLine{00037\ \}\ \textcolor{comment}{//\ namespace\ GameEngine::Entity}}
