--- a/docs/technical/latex/struct_game_engine_1_1_entity_1_1_component_blue_print.tex
+++ b/docs/technical/latex/struct_game_engine_1_1_entity_1_1_component_blue_print.tex
@@ -1,5 +1,5 @@
 \doxysection{Game\+Engine\+::Entity\+::Component\+Blue\+Print Struct Reference}
-\hypertarget{struct_game_engine_1_1_entity_1_1_component_blue_print}{}\label{struct_game_engine_1_1_entity_1_1_component_blue_print}\index{GameEngine::Entity::ComponentBluePrint@{GameEngine::Entity::ComponentBluePrint}}
+\hypertarget{struct_game_engine_1_1_entity_1_1_component_blue_print}{}\label{struct_game_engine_1_1_entity_1_1_component_blue_print}\index{GameEngine::Entity::ComponentsBluePrint@{GameEngine::Entity::ComponentsBluePrint}}
 \doxysubsubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
