--- a/docs/technical/latex/Commands_8hpp_source.tex
+++ b/docs/technical/latex/Commands_8hpp_source.tex
@@ -7,7 +7,7 @@
 \DoxyCodeLine{3 \textcolor{comment}{//}}
 \DoxyCodeLine{4 }
 \DoxyCodeLine{5 \textcolor{preprocessor}{\#define HELLO\_COMMAND "{}/hello"{}}}
-\DoxyCodeLine{6 \textcolor{preprocessor}{\#define UPDATE\_NAME\_COMMAND "{}/update\_name"{}}}
+\DoxyCodeLine{6 \textcolor{preprocessor}{\#define UPDATE\_NAME\_COMMAND "{}/execute\_name"{}}}
 \DoxyCodeLine{7 \textcolor{preprocessor}{\#define JOIN\_ROOM\_COMMAND "{}/join\_room"{}}}
 \DoxyCodeLine{8 \textcolor{preprocessor}{\#define INPUT\_COMMAND "{}/input"{}}}
 \DoxyCodeLine{9 \textcolor{preprocessor}{\#define START\_GAME\_COMMAND "{}/start\_game"{}}}
