--- a/docs/technical/latex/_animation_8hpp_source.tex
+++ b/docs/technical/latex/_animation_8hpp_source.tex
@@ -27,7 +27,7 @@
 \DoxyCodeLine{00023\ \ \ \ \ :\ \textcolor{keyword}{public}\ \mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_system}{GameEngine::ECS::System}}}
 \DoxyCodeLine{00024\ \ \ \ \ ,\ \textcolor{keyword}{public}\ \mbox{\hyperlink{class_game_engine_1_1_system_1_1_i_update_system}{IUpdateSystem}}\ \{}
 \DoxyCodeLine{00025\ \ \ \ \textcolor{keyword}{public}:}
-\DoxyCodeLine{00026\ \ \ \ \ \textcolor{keywordtype}{void}\ update(\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{GameEngine::ECS::Registry}}\ \&,\ \mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{GameEngine::UI::WindowContext}}\ \&)\ \textcolor{keyword}{final}}
+\DoxyCodeLine{00026\ \ \ \ \ \textcolor{keywordtype}{void}\ execute(\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{GameEngine::ECS::Registry}}\ \&,\ \mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{GameEngine::UI::WindowContext}}\ \&)\ \textcolor{keyword}{final}}
 \DoxyCodeLine{00027\ \ \ \ \ \{}
 \DoxyCodeLine{00028\ \ \ \ \ \}}
 \DoxyCodeLine{00029\ \ \ \};}
