--- a/docs/technical/latex/annotated.tex
+++ b/docs/technical/latex/annotated.tex
@@ -84,7 +84,7 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{struct_timed_message}{Timed\+Message}} \\*Used to represent a message with a timestamp }{\pageref{struct_timed_message}}{}
 \item\contentsline{section}{\mbox{\hyperlink{struct_component_r_type_1_1_transform}{Component\+RType\+::\+Transform}} \\*A component representing the transformation properties of an entity }{\pageref{struct_component_r_type_1_1_transform}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_network_1_1_u_d_p_server}{Network\+::\+UDPServer}} \\*Manages a UDP server for handling network communication }{\pageref{class_network_1_1_u_d_p_server}}{}
-\item\contentsline{section}{\mbox{\hyperlink{class_client_1_1_update_name_command_handler}{Client\+::\+Update\+Name\+Command\+Handler}} \\*Handler for update name commands in a networked environment }{\pageref{class_client_1_1_update_name_command_handler}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_client_1_1_update_name_command_handler}{Client\+::\+Update\+Name\+Command\+Handler}} \\*Handler for execute name commands in a networked environment }{\pageref{class_client_1_1_update_name_command_handler}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_network_1_1_update_name_command_handler}{Network\+::\+Update\+Name\+Command\+Handler}} }{\pageref{class_network_1_1_update_name_command_handler}}{}
 \item\contentsline{section}{\mbox{\hyperlink{struct_update_name_data}{Update\+Name\+Data}} \\*Structure for data related to a \textquotesingle{}Name\textquotesingle{} command }{\pageref{struct_update_name_data}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_game_engine_1_1_u_i_1_1_window}{Game\+Engine\+::\+UI\+::\+Window}} }{\pageref{class_game_engine_1_1_u_i_1_1_window}}{}
