--- a/docs/technical/latex/classClient_1_1Network.tex
+++ b/docs/technical/latex/classClient_1_1Network.tex
@@ -19,7 +19,7 @@ void {\bfseries send\+Message} (const std\+::string \&command, const char $\ast$
 void {\bfseries connect\+To\+Server} ()
 \item 
 \mbox{\Hypertarget{classClient_1_1Network_a9090adb4709e633a7787595896adcc07}\label{classClient_1_1Network_a9090adb4709e633a7787595896adcc07}} 
-void {\bfseries update\+Name} (std\+::string name)
+void {\bfseries execute\+Name} (std\+::string name)
 \item 
 \mbox{\Hypertarget{classClient_1_1Network_af9322d011cea31df49fe776392ad0648}\label{classClient_1_1Network_af9322d011cea31df49fe776392ad0648}} 
 void {\bfseries join\+Room} (int room\+Id)
