--- a/docs/technical/latex/class_client_1_1_g_u_i.tex
+++ b/docs/technical/latex/class_client_1_1_g_u_i.tex
@@ -33,7 +33,7 @@ void {\bfseries unsubscribe\+Display} ()
 \item 
 void {\bfseries launch} ()
 \item 
-void {\bfseries update} ()
+void {\bfseries execute} ()
 \end{DoxyCompactItemize}
 \doxysubsubsection*{Additional Inherited Members}
 \doxysubsection*{Public Types inherited from \mbox{\hyperlink{class_game_engine_1_1_u_i_1_1_window}{Game\+Engine\+::\+UI\+::\+Window}}}
