--- a/docs/technical/latex/class_game_engine_1_1_system_1_1_input.tex
+++ b/docs/technical/latex/class_game_engine_1_1_system_1_1_input.tex
@@ -10,7 +10,7 @@ Inheritance diagram for Game\+Engine\+::System\+::Input\+:\begin{figure}[H]
 \begin{DoxyCompactItemize}
 \item 
 \Hypertarget{class_game_engine_1_1_system_1_1_input_ac555704b6aee8e7ab93289fd6db7454e}\label{class_game_engine_1_1_system_1_1_input_ac555704b6aee8e7ab93289fd6db7454e} 
-void {\bfseries update} (\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{Game\+Engine\+::\+ECS\+::\+Registry}} \&registry, size\+\_\+t player\+Id, Game\+Engine\+::\+Keybinds event\+Key)
+void {\bfseries execute} (\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{Game\+Engine\+::\+ECS\+::\+Registry}} \&registry, size\+\_\+t player\+Id, Game\+Engine\+::\+Keybinds event\+Key)
 \end{DoxyCompactItemize}
 \doxysubsubsection*{Additional Inherited Members}
 \doxysubsection*{Public Attributes inherited from \mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_system}{Game\+Engine\+::\+ECS\+::\+System}}}
