--- a/docs/technical/latex/class_network_1_1_client.tex
+++ b/docs/technical/latex/class_network_1_1_client.tex
@@ -222,7 +222,7 @@ Sets the identifier of the room.
 \index{Network::Client@{Network::Client}!updateLastMessageTime@{updateLastMessageTime}}
 \index{updateLastMessageTime@{updateLastMessageTime}!Network::Client@{Network::Client}}
 \doxysubsubsection{\texorpdfstring{updateLastMessageTime()}{updateLastMessageTime()}}
-{\footnotesize\ttfamily void Network\+::\+Client\+::update\+Last\+Message\+Time (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void Network\+::\+Client\+::execute\+Last\+Message\+Time (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
 
 
