--- a/docs/technical/latex/class_network_1_1_u_d_p_server.tex
+++ b/docs/technical/latex/class_network_1_1_u_d_p_server.tex
@@ -618,7 +618,7 @@ Start to listen for incoming data on the socket. \Hypertarget{class_network_1_1_
 \index{Network::UDPServer@{Network::UDPServer}!updateClientLastMessageTimeFromData@{updateClientLastMessageTimeFromData}}
 \index{updateClientLastMessageTimeFromData@{updateClientLastMessageTimeFromData}!Network::UDPServer@{Network::UDPServer}}
 \doxysubsubsection{\texorpdfstring{updateClientLastMessageTimeFromData()}{updateClientLastMessageTimeFromData()}}
-{\footnotesize\ttfamily void Network\+::\+UDPServer\+::update\+Client\+Last\+Message\+Time\+From\+Data (\begin{DoxyParamCaption}\item[{char \texorpdfstring{$\ast$}{*}}]{data }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void Network\+::\+UDPServer\+::execute\+Client\+Last\+Message\+Time\+From\+Data (\begin{DoxyParamCaption}\item[{char \texorpdfstring{$\ast$}{*}}]{data }\end{DoxyParamCaption})}
 
 
 
