--- a/docs/technical/latex/client_2include_2_client_8hpp_source.tex
+++ b/docs/technical/latex/client_2include_2_client_8hpp_source.tex
@@ -31,7 +31,7 @@
 \DoxyCodeLine{00052\ }
 \DoxyCodeLine{00059\ \ \ \ \ \textcolor{keywordtype}{void}\ run();}
 \DoxyCodeLine{00060\ }
-\DoxyCodeLine{00066\ \ \ \ \ \textcolor{keywordtype}{void}\ update(\mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{GameEngine::UI::WindowContext}}\ \&ctx);}
+\DoxyCodeLine{00066\ \ \ \ \ \textcolor{keywordtype}{void}\ execute(\mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{GameEngine::UI::WindowContext}}\ \&ctx);}
 \DoxyCodeLine{00067\ }
 \DoxyCodeLine{00073\ \ \ \ \ \textcolor{keywordtype}{void}\ event(\mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{GameEngine::UI::WindowContext}}\ \&ctx);}
 \DoxyCodeLine{00074\ }
