--- a/docs/technical/latex/client_2include_2network_2system_2_keyboard_8hpp_source.tex
+++ b/docs/technical/latex/client_2include_2network_2system_2_keyboard_8hpp_source.tex
@@ -21,7 +21,7 @@
 \DoxyCodeLine{00017\ \{}
 \DoxyCodeLine{00025\ \ \ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_client_1_1_system_1_1_network_1_1_keyboard}{Keyboard}}\ :\ \textcolor{keyword}{public}\ \mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_system}{GameEngine::ECS::System}}\ \{}
 \DoxyCodeLine{00026\ \ \ \ \textcolor{keyword}{public}:}
-\DoxyCodeLine{00036\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_client_1_1_system_1_1_network_1_1_keyboard_a12894e41634bf24f2ea054a4e89042f5}{update}}(\mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{GameEngine::UI::WindowContext}}\&\ ctx,\ \mbox{\hyperlink{class_client_1_1_network}{::Client::Network}}\&\ network)}
+\DoxyCodeLine{00036\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_client_1_1_system_1_1_network_1_1_keyboard_a12894e41634bf24f2ea054a4e89042f5}{execute}}(\mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{GameEngine::UI::WindowContext}}\&\ ctx,\ \mbox{\hyperlink{class_client_1_1_network}{::Client::Network}}\&\ network)}
 \DoxyCodeLine{00037\ \ \ \ \ \{}
 \DoxyCodeLine{00038\ \ \ \ \ \ \ \textcolor{keywordflow}{if}\ (ctx.event.type\ !=\ sf::Event::KeyPressed)}
 \DoxyCodeLine{00039\ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return};}
