--- a/docs/technical/latex/_i_update_system_8hpp_source.tex
+++ b/docs/technical/latex/_i_update_system_8hpp_source.tex
@@ -19,7 +19,7 @@
 \DoxyCodeLine{00015\ \ \ \ \textcolor{keyword}{public}:}
 \DoxyCodeLine{00016\ \ \ \ \ \mbox{\hyperlink{class_game_engine_1_1_system_1_1_i_update_system}{\string~IUpdateSystem}}()\ =\ \textcolor{keywordflow}{default};}
 \DoxyCodeLine{00017\ }
-\DoxyCodeLine{00018\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ update(\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{GameEngine::ECS::Registry}}\&\ registry,\ \mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{GameEngine::UI::WindowContext}}\&\ ctx)\ =\ 0;}
+\DoxyCodeLine{00018\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ execute(\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{GameEngine::ECS::Registry}}\&\ registry,\ \mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{GameEngine::UI::WindowContext}}\&\ ctx)\ =\ 0;}
 \DoxyCodeLine{00019\ \ \ \};}
 \DoxyCodeLine{00020\ }
 \DoxyCodeLine{00021\ \}\ \textcolor{comment}{//\ namespace\ GameEngine::System;}}
