--- a/docs/technical/latex/class_game_engine_1_1_system_1_1_move.tex
+++ b/docs/technical/latex/class_game_engine_1_1_system_1_1_move.tex
@@ -10,7 +10,7 @@ Inheritance diagram for Game\+Engine\+::System\+::Move\+:\begin{figure}[H]
 \begin{DoxyCompactItemize}
 \item 
 \Hypertarget{class_game_engine_1_1_system_1_1_move_a236c82bc29ab286eba4625ff39495435}\label{class_game_engine_1_1_system_1_1_move_a236c82bc29ab286eba4625ff39495435} 
-void {\bfseries update} (\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{Game\+Engine\+::\+ECS\+::\+Registry}} \&registry)
+void {\bfseries execute} (\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{Game\+Engine\+::\+ECS\+::\+Registry}} \&registry)
 \end{DoxyCompactItemize}
 \doxysubsubsection*{Additional Inherited Members}
 \doxysubsection*{Public Attributes inherited from \mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_system}{Game\+Engine\+::\+ECS\+::\+System}}}
