--- a/docs/technical/latex/class_game_engine_1_1_system_1_1_physics.tex
+++ b/docs/technical/latex/class_game_engine_1_1_system_1_1_physics.tex
@@ -10,7 +10,7 @@ Inheritance diagram for Game\+Engine\+::System\+::Physics\+:\begin{figure}[H]
 \begin{DoxyCompactItemize}
 \item 
 \Hypertarget{class_game_engine_1_1_system_1_1_physics_a98365f35f8dee4ddeb18dbf8f0da36d3}\label{class_game_engine_1_1_system_1_1_physics_a98365f35f8dee4ddeb18dbf8f0da36d3} 
-void {\bfseries update} (\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{Game\+Engine\+::\+ECS\+::\+Registry}} \&registry)
+void {\bfseries execute} (\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{Game\+Engine\+::\+ECS\+::\+Registry}} \&registry)
 \end{DoxyCompactItemize}
 \doxysubsubsection*{Additional Inherited Members}
 \doxysubsection*{Public Attributes inherited from \mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_system}{Game\+Engine\+::\+ECS\+::\+System}}}
