--- a/docs/technical/latex/game_engine_2include_2game_engine_2system_2_input_8hpp_source.tex
+++ b/docs/technical/latex/game_engine_2include_2game_engine_2system_2_input_8hpp_source.tex
@@ -20,7 +20,7 @@
 \DoxyCodeLine{00016\ }
 \DoxyCodeLine{00017\ \ \ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_game_engine_1_1_system_1_1_input}{Input}}\ :\ \textcolor{keyword}{public}\ \mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_system}{GameEngine::ECS::System}}\ \{}
 \DoxyCodeLine{00018\ \ \ \ \textcolor{keyword}{public}:}
-\DoxyCodeLine{00019\ \ \ \ \ \textcolor{keywordtype}{void}\ update(\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{GameEngine::ECS::Registry}}\&\ registry,\ \textcolor{keywordtype}{size\_t}\ playerId,\ GameEngine::Keybinds\ eventKey)}
+\DoxyCodeLine{00019\ \ \ \ \ \textcolor{keywordtype}{void}\ execute(\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{GameEngine::ECS::Registry}}\&\ registry,\ \textcolor{keywordtype}{size\_t}\ playerId,\ GameEngine::Keybinds\ eventKey)}
 \DoxyCodeLine{00020\ \ \ \ \ \{}
 \DoxyCodeLine{00021\ \ \ \ \ \ \ \textcolor{keyword}{auto}\&\ componentManager\ =\ registry.getComponentManager();}
 \DoxyCodeLine{00022\ }
